--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -11,6 +11,7 @@
 		<div class="error-fied">
 			
 		</div>
+		test upload
 		<div id="stream-container" class="col-xs-12">
 			<% if (tweets.length > 0) { %>
 			<% tweets.forEach( tweet => { %>
