rensat databasen och börjar köra de live nu

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -18,7 +18,7 @@
 				
 				<div class="tweet-img"><img src="<%= tweet.userimage %>" alt="twitter profilbild"></div>
 				<div class="tweet-container-inner">
-					<a href="/">
+					<a  target="_blank" rel="noopener noreferrer" href="https://twitter.com/<%= tweet.screen_name %>">
 						<div class="tweet-name"><%= tweet.screen_name %></div>
 						<div class="tweet-text"><%= tweet.text %></div>
 						<div class="retweet-text"><%= tweet.retweet_text %></div>
