--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -87,7 +87,7 @@ a:hover {text-decoration: none;}
     align-items: center;
     height: 60px;
     border: 2px solid #000;
-    margin: auto;
+    margin: auto 0;
 }
 .tweet-checkbox i {
 	font-size: 50px;
